# koganeee

./: BOM.csv  JOURNAL.md  LICENSE  README.md
.cursor/plans/: pcb_routing_guide_e87ecde4.plan.md
cad/: Body.step  Drone body.step  Ground station.step  Head v3.step  Nose.step  Tail.step  Wings.step
firmware/: README.md  firmware.ioc
firmware/base-station/: README.md  pyproject.toml
firmware/base-station/kogane_base/: __init__.py  config.py  main.py  protocol.py
firmware/base-station/kogane_base.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
firmware/base-station/kogane_base/fusion/: kalman.py
firmware/base-station/kogane_base/link/: setpoint.py
firmware/base-station/kogane_base/net/: udp.py
firmware/base-station/kogane_base/screen/: renderer.py
firmware/base-station/kogane_base/tracking/: mmwave.py
firmware/base-station/kogane_base/vision/: __init__.py  demo.py  detector.py  geometry.py  sources.py
firmware/base-station/kogane_base/voice/: pipeline.py
firmware/companion-esp32s3/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/companion-esp32s3/main/: CMakeLists.txt  Kconfig.projbuild  audio_i2s.c  audio_i2s.h  camera_dvp.c  camera_dvp.h  display_spi.c  display_spi.h  idf_component.yml  kogane_msg.h  link_fc.c  link_fc.h  main.c  servo_ledc.c  servo_ledc.h  wifi_udp.c  wifi_udp.h
firmware/fc-inav/: README.md
firmware/mmwave-node-esp32c3/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/shared/: PROTOCOL.md
pcb/FC/: FC-erc.rpt  FC.kicad_pcb  FC.kicad_prl  FC.kicad_pro  FC.kicad_sch  lcsc.py  (+8 more)
(+83 files in other folders)
